--- a/styles/conceptual02.css
+++ b/styles/conceptual02.css
@@ -177,6 +177,7 @@
     width: 350px;
     height: 430px;
     box-shadow: 4px 8px 4px gray;
+    border-radius: 5px;
 }
 
 .blog-img {
@@ -196,4 +197,15 @@
     gap: 30px;
     padding-left: 60px;
     padding-right: 60px;
+    margin-bottom: 50px;
+}
+
+/* Footer */
+.footer-container {
+    display: flex;
+    justify-content: space-around;
+    color: white;
+    background-color: rgb(41, 38, 38);
+    padding: 10em;
+    line-height: 30px;
 }
